--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
             <h5>To get latest rates use method below:</h5>
             <div class="shell">
                 <pre>
-<span class="method">GET</span>  <span class="keyword">http://api.azn.tools/latest</span>
+<span class="method">GET</span>  <span class="keyword">http://azn.tools/latest</span>
                 </pre>
             </div>
             <br>
