--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <header>
             <div class="logo"> AZN.tools</div>
             <div class="links">
-                <a href="#">Uptime</a> |
+                <a href="https://stats.uptimerobot.com/pXq6PHzOLP" target="_blank">Uptime</a> |
                 <a href="https://www.cbar.az/currency/rates?language=en" target="_blank">Data Source</a>
             </div>
         </header>
